# Face-Recognition-System-Based-On-openCV

./: .gitignore  CMakeLists.txt  README.md  appdatapaths.cpp  appdatapaths.h  facedatabase.cpp  facedatabase.h  facerecognizer.cpp  facerecognizer.h  facesamplestorage.cpp  facesamplestorage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  personmanagerdialog.cpp  personmanagerdialog.h  recognitionlogstorage.cpp  recognitionlogstorage.h
tests/: face_database_test.cpp  face_detector_diagnostic.cpp  face_detector_smoke_test.cpp  face_feature_smoke_test.cpp
